--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "reactniceresume",
+  "name": "logankloft",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "http://LoganKloft.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,7 +19,9 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
